# ros2-quadruped-locomotion

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/quadraped_description/: CMakeLists.txt  package.xml
src/quadruped_control/: CMakeLists.txt  package.xml
src/quadruped_control/config/: quadruped_controllers.yaml
src/quadruped_control/launch/: sim_launch.py
src/quadruped_description/: CMakeLists.txt  package.xml
src/quadruped_description/launch/: display.launch.py
src/quadruped_description/rviz/: display.rviz
src/quadruped_description/urdf/: go1.urdf
src/quadruped_locomotion/: CMakeLists.txt  package.xml
src/quadruped_locomotion/include/quadruped_locomotion/: constants.hpp  ik_solver.hpp
src/quadruped_locomotion/launch/: balance_launch.py  brain_launch.py  pushup_launch.py  teleop_launch.py  trot_launch.py
src/quadruped_locomotion/src/: balance_node.cpp  ik_node.cpp  ik_solver.cpp  ik_test.cpp  pushup_node.cpp  teleop_node.cpp  trot_node.cpp
